--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,34 @@
 buildscript {
-	repositories {
-		mavenCentral()
-		maven {
-			name = "forge"
-			url = "http://files.minecraftforge.net/maven"
-		}
-		maven {
-			name = "sonatype"
-			url = "https://oss.sonatype.org/content/repositories/snapshots/"
-		}
-        maven {
-            name = 'minecrell'
-            url = "http://repo.minecrell.net/snapshots"
-        }
+    repositories {
+	mavenCentral()
+	maven {
+	    name = "forge"
+	    url = "http://files.minecraftforge.net/maven"
 	}
-	dependencies {
-        classpath 'net.minecrell:VanillaGradle:3.0-SNAPSHOT'
+	maven {
+	    name = "sonatype"
+	    url = "https://oss.sonatype.org/content/repositories/snapshots/"
 	}
+	maven {
+	    name = 'minecrell'
+	    url = "http://repo.minecrell.net/snapshots"
+	}
+    }
+    dependencies { classpath 'net.minecrell:VanillaGradle:3.0-SNAPSHOT' }
 }
 apply plugin: 'net.minecrell.vanilla'
 
 archivesBaseName = "mod_DaFlight"
 version = "2.4.r6_mc1.8"
-ext.revision = '44'
-ext.common = project ':DaFlightCommon'
-ext.liteloader = project ':DaFlightLiteloader'
+ext {
+    revision = '44'
+    common = project ':DaFlightCommon'
+    liteloader = project ':DaFlightLiteloader'
+}
 
 minecraft {
-	version = "1.8"
-    mappings = 'snapshot_20150606'
+    version = "1.8"
+    mappings = 'snapshot_20150817'
 }
 evaluationDependsOnChildren()
 jar {
@@ -36,6 +36,4 @@ jar {
     from common.sourceSets.main.output
     from liteloader.sourceSets.main.output
 }
-reobf {
-    setSrgMcp()
-}
+reobf.setSrgMcp()
